# Advent-of-Code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  snippets.py
2015/1/: solve.py
2015/10/: solve.py  test_solve.py
2015/11/: solve.py  test_solve.py
2015/12/: solve.py  test_solve.py
2015/16/: solve.py
2015/2/: solve.py
2015/3/: solve.py
2015/4/: solve.py
2015/5/: solve.py  test_solve.py
2015/6/: solve.py
2015/8/: solve.py  test_solve.py
2022/1/: part_2.py  solve.py
2022/10/: solve.py
2022/11/: solve.py
2022/12/: solve.py
2022/13/: solve.py  test_solve.py
2022/14/: solve.py
2022/15/: solve.py
2022/16/: solve.py
2022/2/: part_1.py  part_2.py
2022/3/: part_1.py  part_2.py
2022/4/: part_1.py  solve.py
2022/5/: part_1.py  part_2.py
2022/6/: part_1.py  solve.py
2022/7/: input.txt  part_1.py  solve.py
2022/8/: solve.py
2022/9/: solve.py
2022/Day 1/: part_1.py
2022/Day_2/: part_1.py
2022/Day_3/: part_1.py
2022/Day_4/: part_2.py
2022/Day_5/: part_1.py
2022/Day_6/: part_1.py
2023/1/: solve.py  test_solve.py
2023/2/: solve.py  test_solve.py
