[tool.poetry]
name = "advent of code"
version = "0.1.0"
description = "Puzzle solutions for Advent of Code event."
authors = ["Jakub Kowalczyk <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
ruff = "^0.0.277"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
